[feat] update code usecase user.
